# ue-eyes

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  ue-eyes.example.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml  test.yml
demo_projects/: README.md
demo_projects/UEEyesTest/: .gitignore  UEEyesTest.uproject
demo_projects/UEEyesTest/Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini
demo_projects/UEEyesTest/Source/: UEEyesTest.Target.cs  UEEyesTestEditor.Target.cs
demo_projects/UEEyesTest/Source/UEEyesTest/: UEEyesTest.Build.cs  (+8 more)
docs/plans/: 2026-03-19-ue-eyes-implementation.md  2026-03-20-autonomous-research-loop.md  2026-03-20-ci-cd.md  2026-03-20-impl-autonomous-loop.md  2026-03-20-impl-ci-cd.md  2026-03-20-impl-plugin-distribution.md  2026-03-20-impl-plugin-setup.md  2026-03-20-plugin-distribution.md  2026-03-20-plugin-setup-installer.md
docs/specs/: 2026-03-19-ue-eyes-design.md
plugin/UEEyes/: UEEyes.uplugin
scripts/: check_version.py
skills/capture/: SKILL.md
skills/research-loop/: SKILL.md
skills/ue-eyes-setup/: SKILL.md
tests/: test_cameras.py  test_capture.py  test_cli.py  test_config.py  test_experiment.py  test_loop.py  test_project_setup.py  test_remote_exec.py  test_scoring.py
ue_eyes/: __init__.py  cameras.py  capture.py  cli.py  config.py  project_setup.py  remote_exec.py
ue_eyes/experiment/: __init__.py  loop.py  params.py  results.py  runner.py
ue_eyes/scoring/: __init__.py  compare.py  metrics.py  rubric.py
ue_eyes/unreal_scripts/: camera_control.py  capture_frame.py  render_sequence.py  scene_info.py
(+12 files in other folders)
