[project]
name = "ue-eyes"
version = "0.1.0"
description = "Give AI agents visual access to Unreal Engine 5.7 projects"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ancient23"},
]
keywords = ["unreal-engine", "ai-agent", "visual", "capture", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Multimedia :: Graphics",
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "opencv-python>=4.8",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ue-eyes = "ue_eyes.cli:main"

[project.urls]
Homepage = "https://github.com/Ancient23/ue-eyes"
Repository = "https://github.com/Ancient23/ue-eyes"
Issues = "https://github.com/Ancient23/ue-eyes/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0",
]
